Fixes #29: Paragraph spacing in main content area

--- a/src/GlobeSoft/DamOSansaViitoruluiBundle/Resources/public/css/content.less
+++ b/src/GlobeSoft/DamOSansaViitoruluiBundle/Resources/public/css/content.less
@@ -5,6 +5,31 @@
 .page-content {
   font-size: 140%;
   padding: 2em 0;
+
+  h1, h2, h3, h4 {
+    margin-bottom: 1em;
+  }
+
+  hr {
+    margin: 2em 0;
+  }
+
+  p {
+    margin-left: 10px;
+    word-spacing: 1.3px;
+  }
+
+  .breadcrumb {
+    display: none;
+  }
+
+  img {
+    margin: 1em 0;
+  }
+
+  .btn-lg {
+    margin-top: 1em;
+  }
 }
 
 .listing-with-thumbnail {
